--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 detektPluginVersion = 1.0.0.RC9.2
 dokkaPluginVersion = 0.9.16
+jibPluginVersion = 0.9.11
 kotlinPluginVersion = 1.2.71
 versionsPluginVersion = 0.20.0
 
