--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -1,3 +1,9 @@
+plugins {
+    id 'com.google.cloud.tools.jib'
+}
+
+jib.to.image = 'ort:latest'
+
 // Apply core plugins.
 apply plugin: 'application'
 
