Gradle: Use single quotes where no variable interpolation is needed

--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -23,6 +23,6 @@ dependencies {
     compile project(':utils')
 
     compile "com.beust:jcommander:$jcommanderVersion"
-    compile "org.jetbrains.kotlin:kotlin-reflect"
+    compile 'org.jetbrains.kotlin:kotlin-reflect'
     compile "org.reflections:reflections:$reflectionsVersion"
 }
